--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 		</dependency>
 
 		<dependency>
-			<!--热部署插件-->
+			<!--热部署插件 shift + ctrl + atl +/ -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
