--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/epose?useSSL=false&useUnicode=true&characterEncoding=utf-8
-spring.datasource.username = root
-spring.datasource.password = epose123
+spring.datasource.url = jdbc:mysql://cacacai.cn:3306/epose?useSSL=false&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username = epose
+spring.datasource.password = 123456
 spring.thymeleaf.cache = false
