--- a/pom.xml
+++ b/pom.xml
@@ -66,10 +66,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		<groupId>com.alibaba</groupId>
-		<artifactId>fastjson</artifactId>
-		<version>1.2.47</version>
-	</dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
