--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url = jdbc:mysql://cacacai.cn:3306/epose?useSSL=false&useUnico
 spring.datasource.username = epose
 spring.datasource.password = 123456
 spring.thymeleaf.cache = false
-
+server.port=9090
 #ÍøÒ³ÃèÊö
 description = epose
 keywords = epose
